# asan-harness

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
.github/workflows/: ci.yml
crates/asan-alloc/: Cargo.toml
crates/asan-alloc/src/: lib.rs
crates/asan-cli/: Cargo.toml
crates/asan-cli/src/: main.rs  triage.rs
crates/asan-core/: Cargo.toml
crates/asan-core/src/: lib.rs  shadow.rs
crates/asan-core/tests/: shadow_invariants.rs
crates/asan-corpus/: Cargo.toml
crates/asan-corpus/src/: lib.rs
crates/asan-driver/: Cargo.toml
crates/asan-driver/src/: fuzz_target.rs  lib.rs  minify.rs  replay.rs
crates/asan-oracle/: Cargo.toml
crates/asan-oracle/src/: dedup.rs  lib.rs  log_parser.rs  report.rs
crates/asan-re-firmware/: Cargo.toml
crates/asan-re-firmware/src/: lib.rs
crates/asan-re-frida/: Cargo.toml
crates/asan-re-frida/src/: lib.rs
crates/asan-re-qemu/: Cargo.toml
crates/asan-re-qemu/src/: lib.rs
examples/c-ffi-asan/: Cargo.toml  build.rs
examples/c-ffi-asan/c/: buggy.c
examples/c-ffi-asan/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/fixtures/: double_free.txt  hbo_right.txt  uaf.txt
examples/demo/src/: main.rs
examples/rust-asan/: Cargo.toml
examples/rust-asan/src/: main.rs
scripts/: verify-asan.sh
