[workspace]
resolver = "2"
members = [
    "crates/asan-core",
    "crates/asan-alloc",
    "crates/asan-driver",
    "crates/asan-re-frida",
    "crates/asan-re-qemu",
    "crates/asan-re-firmware",
    "crates/asan-oracle",
    "crates/asan-corpus",
    "crates/asan-cli",
    "examples/demo",
    "examples/rust-asan",
    "examples/c-ffi-asan",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/copyleftdev/asan-harness"
authors = ["asan-harness contributors"]

[workspace.dependencies]
# Internal. The `version` field is required for `cargo publish` to accept
# path deps — it tells crates.io which version to resolve against when the
# path isn't available.
asan-core      = { path = "crates/asan-core",      version = "0.0.1" }
asan-alloc     = { path = "crates/asan-alloc",     version = "0.0.1" }
asan-driver    = { path = "crates/asan-driver",    version = "0.0.1" }
asan-oracle    = { path = "crates/asan-oracle",    version = "0.0.1" }
asan-corpus    = { path = "crates/asan-corpus",    version = "0.0.1" }
asan-re-frida    = { path = "crates/asan-re-frida",    version = "0.0.1" }
asan-re-qemu     = { path = "crates/asan-re-qemu",     version = "0.0.1" }
asan-re-firmware = { path = "crates/asan-re-firmware", version = "0.0.1" }

# LibAFL family — SPEC §10.0 vendoring decision.
libafl           = { version = "0.15", default-features = false }
libafl_bolts     = { version = "0.15", default-features = false }
libafl_targets   = { version = "0.15", default-features = false }

# Common utilities
anyhow     = "1"
thiserror  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
backtrace  = "0.3"
log        = "0.4"
env_logger = "0.11"

[profile.release]
debug = 1           # keep line tables for crash symbolication
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.fuzz]
inherits = "release"
debug = 2           # full debuginfo for crash reports
opt-level = 3
overflow-checks = true

# Enable ASan-instrumented std when targeting nightly:
#   RUSTFLAGS="-Zsanitizer=address" cargo +nightly build -Zbuild-std \
#       --target x86_64-unknown-linux-gnu --profile fuzz
