[package]
name = "asan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line driver — `asan-harness run|replay|triage|doctor` per SPEC §10.4."

[[bin]]
name = "asan-harness"
path = "src/main.rs"

[dependencies]
asan-core    = { workspace = true }
asan-oracle  = { workspace = true }
asan-corpus  = { workspace = true }
asan-driver  = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
env_logger   = { workspace = true }
log          = { workspace = true }
