[package]
name = "asan-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Crash classification, deduplication, and severity ranking — SPEC §12."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
backtrace = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
