[package]
name = "asan-re-qemu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mode C: stripped binary harnessing via QEMU (QASan) — SPEC §7.3. Skeleton."
publish = false  # stub; enable once the `real` feature is implemented.

[features]
default = []
real = []

[dependencies]
asan-core = { workspace = true }
